--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "lenis": "^1.3.17",
     "lucide-react": "^0.563.0",
     "motion": "^12.29.0",
+    "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
+    "sonner": "^2.0.7",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
