--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-github-calendar": "^5.0.4",
     "react-redux": "^9.2.0",
     "sonner": "^2.0.7",
     "swiper": "^12.0.3",
