--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-dom": "^19.2.0",
     "react-github-calendar": "^5.0.4",
     "react-redux": "^9.2.0",
+    "react-router": "^7.13.0",
+    "react-router-dom": "^7.13.0",
     "sonner": "^2.0.7",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
