--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-github-calendar": "^5.0.4",
+    "react-helmet": "^6.1.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.13.0",
     "react-router-dom": "^7.13.0",
@@ -41,6 +42,7 @@
     "@types/node": "^24.10.9",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
