--- a/package.json
+++ b/package.json
@@ -48,10 +48,13 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "sharp": "^0.34.5",
+    "svgo": "^4.0.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
-    "vite": "npm:rolldown-vite@7.2.5"
+    "vite": "npm:rolldown-vite@7.2.5",
+    "vite-plugin-image-optimizer": "^2.0.3"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.5"
